plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'com.danielvm'
version = '0.1.0-alpha'


java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
    set('springCloudVersion', "2023.0.0-RC1")
    set('apacheCollectionsVersion', '4.4')
    set('pandoCryptoVersion', '1.1.1')
    set('commonsCodecVersion', '1.15')
    set('lombokVersion', '1.18.30')
    set('aspectJWeaverVersion', '1.8.9')
    set('aspectJRTVersion', '1.9.20')
    set('i2pCryptoVersion', '0.3.0')
    set('IOCommonsVersion', '2.15.1')
    set('reactorTestVersion', '3.6.0')
    set('testContainersVersion', '1.19.2')
    set('tcJunitVersion', '1.19.3')
    set('junitJupiterParamsVersion', '5.10.1')
    set('springDataMongoDbVersion', '3.1.2')
    set('springDataRedisVersion', '3.1.2')
    set('springSessionRedisVersion', '3.1.1')
    set('mapStructVersion', '1.5.5.Final')
    set('resilienceReactorVersion', '1.6.1')
    set('resilienceRateLimiterVersion', '1.6.1')
}

jar {
    enabled = false
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-devtools'
    implementation "org.springframework.session:spring-session-data-redis:${springSessionRedisVersion}"
    implementation "org.springframework.boot:spring-boot-starter-data-redis:${springDataRedisVersion}"
    implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:${springDataMongoDbVersion}"
    implementation "io.github.resilience4j:resilience4j-reactor:${resilienceReactorVersion}"
    implementation "io.github.resilience4j:resilience4j-ratelimiter:${resilienceRateLimiterVersion}"
    implementation "org.mapstruct:mapstruct:${mapStructVersion}"
    implementation "net.i2p.crypto:eddsa:${i2pCryptoVersion}"
    implementation "commons-io:commons-io:${IOCommonsVersion}"
    implementation "org.projectlombok:lombok:${lombokVersion}"
    implementation "org.aspectj:aspectjrt:${aspectJRTVersion}"
    implementation "org.aspectj:aspectjweaver:${aspectJWeaverVersion}"
    implementation "commons-codec:commons-codec:${commonsCodecVersion}"
    implementation "software.pando.crypto:salty-coffee:${pandoCryptoVersion}"
    implementation "org.apache.commons:commons-collections4:${apacheCollectionsVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.testcontainers:junit-jupiter:${tcJunitVersion}"
    testImplementation "io.projectreactor:reactor-test:${reactorTestVersion}"
    testImplementation "org.testcontainers:testcontainers:${testContainersVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitJupiterParamsVersion}"
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
}

tasks.register('version') {
    println project.version
}

tasks.register('projectName') {
    println project.name
}